Replace erd mermaid with png minor tweak to cell output.

--- a/sql_murder_mystery.ipynb
+++ b/sql_murder_mystery.ipynb
@@ -5,80 +5,16 @@
    "metadata": {},
    "source": [
     "# [SQL Murder Mystery](https://mystery.knightlab.com/)\n",
-    "*Can you find out whodunnit?*\n",
+    "*Can you find out whodunit?*\n",
     "\n",
     "There's been a Murder in SQL City! The SQL Murder Mystery is designed to be both a self-directed lesson to learn SQL concepts and commands and a fun game for experienced SQL users to solve an intriguing crime.\n",
     "\n",
     "A crime has taken place and the detective needs your help. The detective gave you the crime scene report, but you somehow lost it. You vaguely remember that the crime was a ​murder​ that occurred sometime on ​Jan.15, 2018​ and that it took place in ​SQL City​. Start by retrieving the corresponding crime scene report from the police department’s database.\n",
     "\n",
     "## Database Schema\n",
-    "```mermaid\n",
-    "erDiagram\n",
-    "    get_fit_now_check_in {\n",
-    "        membership_id text\n",
-    "        check_in_date integer\n",
-    "        check_in_time integer\n",
-    "        check_out_time integer\n",
-    "    }\n",
-    "    get_fit_now_member {\n",
-    "        id int PK\n",
-    "        person_id text\n",
-    "        name text\n",
-    "        membership_start_date integer\n",
-    "        membership_status text\n",
-    "    }\n",
-    "    facebook_event_checkin {\n",
-    "        person_id integer\n",
-    "        event_id integer\n",
-    "        event_name text\n",
-    "        date integer\n",
-    "    }\n",
-    "    crime_scene_report {\n",
-    "        date integer\n",
-    "        type text\n",
-    "        description text\n",
-    "        city text\n",
-    "    }\n",
-    "    interview {\n",
-    "        person_id integer\n",
-    "        transcript text\n",
-    "    }\n",
-    "    person {\n",
-    "        id integer pk\n",
-    "        name text\n",
-    "        license_id integer\n",
-    "        address_number integer\n",
-    "        address_street_name text\n",
-    "        ssn char\n",
-    "    }\n",
-    "    drivers_license {\n",
-    "        id integer\n",
-    "        age integer\n",
-    "        height integer\n",
-    "        eye_color text\n",
-    "        hair_color text\n",
-    "        gender text\n",
-    "        plate_number text\n",
-    "        car_make text\n",
-    "        car_model text\n",
-    "    }\n",
-    "    income {\n",
-    "        ssn char pk\n",
-    "        annual_income integer\n",
-    "    }\n",
-    "    solution {\n",
-    "        user integer\n",
-    "        value text\n",
-    "    }\n",
-    "    \n",
-    "    get_fit_now_check_in }|--|| get_fit_now_member : \"membership_id\"\n",
-    "    get_fit_now_member ||--|| person : \"person_id\"\n",
-    "    facebook_event_checkin }|--|| person : \"person_id\"\n",
-    "    interview ||--|| person : \"person_id\"\n",
-    "    drivers_license ||--|| person : \"license_id\"\n",
-    "    income ||--|| person : \"ssn\"\n",
     "\n",
-    "```\n"
+    "<img alt='Database schema' src='img/ERD-2025-02-01-034356.png' width=50%>\n",
+    "\n"
    ]
   },
   {
@@ -90,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -134,7 +70,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -181,7 +117,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -255,7 +191,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -294,7 +230,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -330,7 +266,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -378,7 +314,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -445,7 +381,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -480,15 +416,15 @@
       "text/markdown": [
        "|     id |   age |   height | eye_color   | hair_color   | gender   | plate_number   | car_make   | car_model   |   id_1 | name           |   license_id |   address_number | address_street_name   |       ssn |\n",
        "|-------:|------:|---------:|:------------|:-------------|:---------|:---------------|:-----------|:------------|-------:|:---------------|-------------:|-----------------:|:----------------------|----------:|\n",
+       "| 183779 |    21 |       65 | blue        | blonde       | female   | H42W0X         | Toyota     | Prius       |  78193 | Maxine Whitely |       183779 |              110 | Fisk Rd               | 137882671 |\n",
        "| 423327 |    30 |       70 | brown       | brown        | male     | 0H42W2         | Chevrolet  | Spark LS    |  67318 | Jeremy Bowers  |       423327 |              530 | Washington Pl, Apt 3A | 871539279 |\n",
-       "| 664760 |    21 |       71 | black       | black        | male     | 4H42WR         | Nissan     | Altima      |  51739 | Tushar Chandra |       664760 |              312 | Phi St                | 137882671 |\n",
-       "| 183779 |    21 |       65 | blue        | blonde       | female   | H42W0X         | Toyota     | Prius       |  78193 | Maxine Whitely |       183779 |              110 | Fisk Rd               | 137882671 |"
+       "| 664760 |    21 |       71 | black       | black        | male     | 4H42WR         | Nissan     | Altima      |  51739 | Tushar Chandra |       664760 |              312 | Phi St                | 137882671 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -531,7 +467,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -581,7 +517,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -622,7 +558,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -660,7 +596,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -689,21 +625,23 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "┌────────┬───────┬────────┬───────────┬────────────┬─────────┬──────────────┬──────────┬───────────┬───────┬──────────────────┬────────────┬────────────────┬─────────────────────┬───────────┬───────────┬───────────┬───────────────┐\n",
-      "│   id   │  age  │ height │ eye_color │ hair_color │ gender  │ plate_number │ car_make │ car_model │  id   │       name       │ license_id │ address_number │ address_street_name │    ssn    │ person_id │    ssn    │ annual_income │\n",
-      "│ int64  │ int64 │ int64  │  varchar  │  varchar   │ varchar │   varchar    │ varchar  │  varchar  │ int64 │     varchar      │   int64    │     int64      │       varchar       │  varchar  │   int64   │  varchar  │     int64     │\n",
-      "├────────┼───────┼────────┼───────────┼────────────┼─────────┼──────────────┼──────────┼───────────┼───────┼──────────────────┼────────────┼────────────────┼─────────────────────┼───────────┼───────────┼───────────┼───────────────┤\n",
-      "│ 202298 │    68 │     66 │ green     │ red        │ female  │ 500123       │ Tesla    │ Model S   │ 99716 │ Miranda Priestly │     202298 │           1883 │ Golden Ave          │ 987756388 │     99716 │ 987756388 │        310000 │\n",
-      "└────────┴───────┴────────┴───────────┴────────────┴─────────┴──────────────┴──────────┴───────────┴───────┴──────────────────┴────────────┴────────────────┴─────────────────────┴───────────┴───────────┴───────────┴───────────────┘\n",
-      "\n"
-     ]
+     "data": {
+      "text/markdown": [
+       "|     id |   age |   height | eye_color   | hair_color   | gender   |   plate_number | car_make   | car_model   |   id_1 | name             |   license_id |   address_number | address_street_name   |       ssn |   person_id |     ssn_1 |   annual_income |\n",
+       "|-------:|------:|---------:|:------------|:-------------|:---------|---------------:|:-----------|:------------|-------:|:-----------------|-------------:|-----------------:|:----------------------|----------:|------------:|----------:|----------------:|\n",
+       "| 202298 |    68 |       66 | green       | red          | female   |         500123 | Tesla      | Model S     |  99716 | Miranda Priestly |       202298 |             1883 | Golden Ave            | 987756388 |       99716 | 987756388 |          310000 |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%dql -t show\n",
+    "%%dql -t df_markdown\n",
     "WITH persons_attending_concert_3_times AS (\n",
     "    -- find individuals who attended the \n",
     "    -- SQL Symphony Concert 3 times in December 2017\n",
@@ -727,7 +665,7 @@
     "AND gender = 'female'\n",
     "AND car_make = 'Tesla'\n",
     "AND hair_color = 'red'\n",
-    "AND car_model = 'Model S'\n"
+    "AND car_model = 'Model S';\n"
    ]
   },
   {
@@ -739,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -757,7 +695,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -843,7 +781,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -874,7 +812,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "sql"
